--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-
-
-
     
 
-   <script src="script.js"></script>
 
+    <script src="script.js" rel="ksalkal"></script>
 </body>
-
 </html>
